// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Component renders correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "justifyContent": "flex-start",
      },
      {
        "alignItems": "stretch",
      },
      {
        "flexWrap": "nowrap",
      },
      undefined,
      {},
    ]
  }
  testID="flex"
>
  <Text
    style={
      [
        {
          "letterSpacing": 0,
          "textAlign": "left",
          "textAlignVertical": "center",
        },
        {
          "color": "#737680",
          "fontFamily": "ProductSansRegular",
          "fontSize": 14,
        },
        {},
        {
          "color": "#777e90",
        },
      ]
    }
  >
    Color
  </Text>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "justifyContent": "flex-start",
        },
        {
          "alignItems": "stretch",
        },
        {
          "flexWrap": "nowrap",
        },
        undefined,
        {
          "gap": 8,
          "marginTop": 10,
        },
      ]
    }
    testID="flex"
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "black",
              "borderColor": "none",
              "borderRadius": "50%",
              "borderWidth": 0,
              "height": 24,
              "shadowColor": "#000",
              "width": 24,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-black"
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "red",
              "borderColor": "none",
              "borderRadius": "50%",
              "borderWidth": 0,
              "height": 24,
              "shadowColor": "#000",
              "width": 24,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-red"
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "blue",
              "borderColor": "none",
              "borderRadius": "50%",
              "borderWidth": 0,
              "height": 24,
              "shadowColor": "#000",
              "width": 24,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-blue"
      />
    </View>
  </View>
</View>
`;

exports[`ColorPicker Component renders correctly with defaultIndex 1 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      {
        "justifyContent": "flex-start",
      },
      {
        "alignItems": "stretch",
      },
      {
        "flexWrap": "nowrap",
      },
      undefined,
      {},
    ]
  }
  testID="flex"
>
  <Text
    style={
      [
        {
          "letterSpacing": 0,
          "textAlign": "left",
          "textAlignVertical": "center",
        },
        {
          "color": "#737680",
          "fontFamily": "ProductSansRegular",
          "fontSize": 14,
        },
        {},
        {
          "color": "#777e90",
        },
      ]
    }
  >
    Color
  </Text>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "justifyContent": "flex-start",
        },
        {
          "alignItems": "stretch",
        },
        {
          "flexWrap": "nowrap",
        },
        undefined,
        {
          "gap": 8,
          "marginTop": 10,
        },
      ]
    }
    testID="flex"
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "black",
              "borderColor": "#fff",
              "borderRadius": "50%",
              "borderWidth": 5,
              "elevation": 4,
              "height": 34,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 6,
              "width": 34,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-black"
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "red",
              "borderColor": "none",
              "borderRadius": "50%",
              "borderWidth": 0,
              "height": 24,
              "shadowColor": "#000",
              "width": 24,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-red"
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "justifyContent": "center",
          },
          {
            "alignItems": "center",
          },
          {
            "flexWrap": "nowrap",
          },
          undefined,
          {
            "height": 34,
            "width": 34,
          },
        ]
      }
      testID="flex"
    >
      <View
        style={
          [
            {
              "backgroundColor": "blue",
              "borderColor": "none",
              "borderRadius": "50%",
              "borderWidth": 0,
              "height": 24,
              "shadowColor": "#000",
              "width": 24,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="dot-blue"
      />
    </View>
  </View>
</View>
`;
